--- a/the_brand/product.html
+++ b/the_brand/product.html
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Single Page</title>
+    <title>Product</title>
 </head>
 
 <body>
@@ -370,151 +370,57 @@
 
         </nav>
     </div>
-    <div class="product-view">
-        <a href="#" class="view-link">
-            <div class="view-link__box">
-                <svg xmlns="http://www.w3.org/2000/svg" height="16" width="10" viewBox="0 0 320 512">
-                    <path class="view-link__box_left"
-                        d="M41.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 256 246.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z" />
-                </svg>
-            </div>
-        </a>
-        <img src="img/single-page/big-pic2.png" alt="big-pic">
-        <a href="#" class="view-link">
-            <div class="view-link__box">
-                <svg xmlns="http://www.w3.org/2000/svg" height="16" width="10" viewBox="0 0 320 512">
-                    <path class="view-link__box_right"
-                        d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z" />
-                </svg>
-            </div>
-        </a>
-    </div>
 
-    <section class="product-desc center">
-        <h3 class="product-desc__category-title">WOMEN COLLECTION</h3>
-        <div class="product-desc__separator">
-            <div class="product-desc__separator_pink"></div>
-        </div>
-        <h3 class="product-desc__heading">Moschino Cheap And Chic</h3>
-        <p class="product-desc__text">Compellingly actualize fully researched processes before proactive outsourcing.
-            Progressively syndicate collaborative architectures before cutting-edge services. Completely visualize
-            parallel
-            core competencies rather than exceptional portals.
-        </p>
-        <div class="product-desc__material-designer">
-            <div class="product-desc__material">
-                <p class="product-desc__property">MATERIAL: </p>
-                <p class="product-desc__property_meaning">COTTON</p>
-            </div>
-            <div class="product-desc__designer">
-                <p class="product-desc__property">DESIGNER: </p>
-                <p class="product-desc__property_meaning">BINBURHAN</p>
-            </div>
-        </div>
-        <h3 class="product-desc__price">
-            $561
-        </h3>
-        <div class="product-desc__price_separator"></div>
 
-        <form action="#">
-            <div class="product-selection">
-                <div class="product-selection__box">
-                    <div class="product-selection__item">
-                        <h3 class="product-selection__title">CHOOSE COLOR</h3>
+    Content
 
-                        <div class="product-selection__color">
-                            <div class="product-selection__color_logo"></div>
-                            <p class="product-selection__color_name">Red</p>
-                            <svg height="23" width="14" viewBox="0 0 448 512">
-                                <path class="product-selection__color_arrow"
-                                    d="M201.4 342.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 274.7 86.6 137.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z" />
-                            </svg>
 
-                        </div>
-                    </div>
-                </div>
-                <div class="product-selection__box">
-                    <div class="product-selection__item">
-                        <h3 class="product-selection__title">CHOOSE SIZE</h3>
 
-                        <div class="product-selection__size">
-                            <div class="product-selection__size_logo"></div>
-                            <p class="product-selection__size_name">XXL</p>
-                            <svg height="23" width="14" viewBox="0 0 448 512">
-                                <path class="product-selection__size_arrow"
-                                    d="M201.4 342.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 274.7 86.6 137.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z" />
-                            </svg>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="product-selection__box">
-                    <div class="product-selection__item">
-                        <h3 class="product-selection__title">QUANTITY</h3>
-                        <div class="product-selection__quantity">
-
-                            <input class="product-selection__quantity_input" placeholder="1" required type="text">
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <button type="submit" class="product-selection__link">
-                <div class="product-selection__button-box">
-                    <div class="product-selection__button">
-                        <svg xmlns="http://www.w3.org/2000/svg" height="24" width="28" viewBox="0 0 576 512">
-                            <path class="product-selection__button_pic"
-                                d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7l5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5H488c13.3 0 24 10.7 24 24s-10.7 24-24 24H199.7c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5H24C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z" />
-                        </svg>
-                        <p class="product-selection__button_text">Add to Cart</p>
-                    </div>
-                </div>
-            </button>
-        </form>
-
-    </section>
-
-    <section class="product-offers center">
-        <h3 class="product-offers__title">
-            you may like also
-        </h3>
-        <div class="product-offers__items">
-            <div class="product-offers__item">
-                <div class="product-offers__item_pic-box"></div>
-                <h3 class="product-offers__item_title">BLAZE LEGGINGS</h3>
-                <p class="product-offers__item_price">$52.00</p>
-            </div>
-
-            <div class="product-offers__items">
-                <div class="product-offers__item">
-                    <div class="product-offers__item_pic-box"></div>
-                    <h3 class="product-offers__item_title">ALEXA SWEATER</h3>
-                    <p class="product-offers__item_price">$52.00</p>
-                </div>
-            </div>
-            <div class="product-offers__items">
-                <div class="product-offers__item">
-                    <div class="product-offers__item_pic-box"></div>
-                    <h3 class="product-offers__item_title">AGNES TOP</h3>
-                    <p class="product-offers__item_price">$52.00</p>
-                </div>
-            </div>
-            <div class="product-offers__items">
-                <div class="product-offers__item">
-                    <div class="product-offers__item_pic-box"></div>
-                    <h3 class="product-offers__item_title">SYLVA SWEATER</h3>
-                    <p class="product-offers__item_price">$52.00</p>
-                </div>
+    <article class="offer-right-prod center">
+        <div class="offer-right-prod__compet">
+            <img class="offer-right-prod__compet_logo" src="img/truck.png" alt="truck">
+            <div class="offer-right-prod__compet_box">
+                <p class="offer-right-prod__compet_title">
+                    Free Delivery
+                </p>
+                <p class="offer-right-prod__compet_text">
+                    Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive
+                    models.
+                </p>
             </div>
         </div>
 
+        <div class="offer-right-prod__compet">
+            <img class="offer-right-prod__compet_logo" src="img/percent.png" alt="percent">
+            <div class="offer-right-prod__compet_box">
+                <p class="offer-right-prod__compet_title">
+                    Sales & discounts
+                </p>
+                <p class="offer-right-prod__compet_text">
+                    Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive
+                    models.
+                </p>
+            </div>
 
 
-    </section>
+        </div>
+
+        <div class="offer-right-prod__compet">
+            <img class="offer-right-prod__compet_logo" src="img/crown.png" alt="crown">
+            <div class="offer-right-prod__compet_box">
+                <p class="offer-right-prod__compet_title">Quality assurance
+                </p>
+                <p class="offer-right-prod__compet_text">
+                    Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive
+                    models.
+                </p>
+            </div>
 
 
+        </div>
 
+
+    </article>
 
     <section class="subscribe center">
         <div class="subscribe-left">
